Fix 'Crash on opening second xmi file'.

BUG:349259
FIXED-IN:2.16.3 (KDE Applications 15.04.3)