umbrello/umlscene.cpp
@@ -1014,7 +1014,7 @@ void UMLScene::checkMessages(ObjectWidget * w)
 
     foreach(MessageWidget *obj, m_MessageList) {
         if (obj->hasObjectWidget(w)) {
-            removeWidget(obj);
+            removeWidgetCmd(obj);
         }
     }
 }
